# track-veil

./: .gitignore  README.md  developer-notes.md  goal.md  pyproject.toml
data/fake/eval/task/: team.org-run.v1.judge.method
data/fake/eval/task1/: team1-run1.contradictory.results  team1-run1.judgemethod  team2-run2.judgemethod
data/fake/eval/task2/: results.tsv
data/fake/metadata/task1/: meta
data/fake/runs/task1/: team.org-run.v1  team1-run1  team2-run2
tests/: __init__.py  test_fingerprinting.py  test_pipeline_integration.py  test_tsv_format_detection.py
track_veil_lib/: __init__.py  report.py
track_veil_lib/anonymizer/: __init__.py  cli.py  errors.py  pipeline.py  repairs.py  transformers.py
trec_anon_lib/: __init__.py  report.py
trec_anon_lib/anonymizer/: __init__.py  cli.py  errors.py  mapping.py  pipeline.py  pseudonyms.py  repairs.py  transformers.py
