[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "track_veil"
dynamic = ["version"]
description = "Anonymizing track data sets for sharing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click",
    "pandas",
    "numpy",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
]

[project.scripts]
track-veil = "track_veil_lib.anonymizer.cli:main"

[project.urls]
Homepage = "https://github.com/trec-auto-judge/track_veil"
# "Bug Tracker" = "https://github.com/trec-auto-judge/auto-judge-code/issues"

[tool.hatch.version]
path = "track_veil_lib/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["track_veil_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203"]
